SimpleParser.py
# Generated from Simple.g4 by ANTLR 4.12.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SimpleParser ( Parser ):

    grammarFileName = "Simple.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'-'", "'+'", "'('", "')'", "'true'", 
                     "'false'", "'or'", "'and'", "'not'", "'='", "'<'", 
                     "'>'", "'<='", "'>='", "'<>'", "'*'", "'/'", "';'", 
                     "'begin'", "'end'", "'exit'", "'goto'", "':'", "'print'", 
                     "'read'", "'label'", "'var'", "':='", "'if'", "'then'", 
                     "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "KEYWORDS", "IDENT", "NUM", "WS" ]

    RULE_prog = 0
    RULE_num_expr = 1
    RULE_bool_expr = 2
    RULE_rel = 3
    RULE_mul_op = 4
    RULE_add_op = 5
    RULE_simple_instr = 6
    RULE_block_instr = 7
    RULE_exit_stat = 8
    RULE_instr = 9
    RULE_goto_stat = 10
    RULE_goto_target = 11
    RULE_output_stat = 12
    RULE_input_stat = 13
    RULE_declaration = 14
    RULE_declarations = 15
    RULE_assign = 16
    RULE_if_stat = 17
    RULE_num = 18

    ruleNames =  [ "prog", "num_expr", "bool_expr", "rel", "mul_op", "add_op", 
                   "simple_instr", "block_instr", "exit_stat", "instr", 
                   "goto_stat", "goto_target", "output_stat", "input_stat", 
                   "declaration", "declarations", "assign", "if_stat", "num" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    KEYWORDS=32
    IDENT=33
    NUM=34
    WS=35

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.12.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.dec = None # DeclarationsContext
            self.ins = None # InstrContext

        def declarations(self):
            return self.getTypedRuleContext(SimpleParser.DeclarationsContext,0)


        def instr(self):
            return self.getTypedRuleContext(SimpleParser.InstrContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_prog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProg" ):
                listener.enterProg(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProg" ):
                listener.exitProg(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProg" ):
                return visitor.visitProg(self)
            else:
                return visitor.visitChildren(self)




    def prog(self):

        localctx = SimpleParser.ProgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_prog)
        try:
            self.state = 42
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                localctx.dec = self.declarations()
                self.state = 39
                localctx.ins = self.instr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 41
                localctx.ins = self.instr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Num_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_num_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class BRACKETEXPRContext(Num_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Num_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def num_expr(self):
            return self.getTypedRuleContext(SimpleParser.Num_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBRACKETEXPR" ):
                listener.enterBRACKETEXPR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBRACKETEXPR" ):
                listener.exitBRACKETEXPR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBRACKETEXPR" ):
                return visitor.visitBRACKETEXPR(self)
            else:
                return visitor.visitChildren(self)


    class NUMERContext(Num_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Num_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def num(self):
            return self.getTypedRuleContext(SimpleParser.NumContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNUMER" ):
                listener.enterNUMER(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNUMER" ):
                listener.exitNUMER(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNUMER" ):
                return visitor.visitNUMER(self)
            else:
                return visitor.visitChildren(self)


    class ADDEXPContext(Num_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Num_exprContext
            super().__init__(parser)
            self.left = None # Num_exprContext
            self.op = None # Add_opContext
            self.right = None # Num_exprContext
            self.copyFrom(ctx)

        def num_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.Num_exprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.Num_exprContext,i)

        def add_op(self):
            return self.getTypedRuleContext(SimpleParser.Add_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterADDEXP" ):
                listener.enterADDEXP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitADDEXP" ):
                listener.exitADDEXP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitADDEXP" ):
                return visitor.visitADDEXP(self)
            else:
                return visitor.visitChildren(self)


    class IDENTNUMContext(Num_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Num_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IDENT(self):
            return self.getToken(SimpleParser.IDENT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIDENTNUM" ):
                listener.enterIDENTNUM(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIDENTNUM" ):
                listener.exitIDENTNUM(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIDENTNUM" ):
                return visitor.visitIDENTNUM(self)
            else:
                return visitor.visitChildren(self)


    class MULEXPContext(Num_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Num_exprContext
            super().__init__(parser)
            self.left = None # Num_exprContext
            self.op = None # Mul_opContext
            self.right = None # Num_exprContext
            self.copyFrom(ctx)

        def num_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.Num_exprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.Num_exprContext,i)

        def mul_op(self):
            return self.getTypedRuleContext(SimpleParser.Mul_opContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMULEXP" ):
                listener.enterMULEXP(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMULEXP" ):
                listener.exitMULEXP(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMULEXP" ):
                return visitor.visitMULEXP(self)
            else:
                return visitor.visitChildren(self)



    def num_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.Num_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 2
        self.enterRecursionRule(localctx, 2, self.RULE_num_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [34]:
                localctx = SimpleParser.NUMERContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 45
                self.num()
                pass
            elif token in [1]:
                localctx = SimpleParser.NUMERContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 46
                self.match(SimpleParser.T__0)
                self.state = 47
                self.num()
                pass
            elif token in [2]:
                localctx = SimpleParser.NUMERContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 48
                self.match(SimpleParser.T__1)
                self.state = 49
                self.num()
                pass
            elif token in [3]:
                localctx = SimpleParser.BRACKETEXPRContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 50
                self.match(SimpleParser.T__2)
                self.state = 51
                self.num_expr(0)
                self.state = 52
                self.match(SimpleParser.T__3)
                pass
            elif token in [33]:
                localctx = SimpleParser.IDENTNUMContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 54
                self.match(SimpleParser.IDENT)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 67
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 65
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
                    if la_ == 1:
                        localctx = SimpleParser.MULEXPContext(self, SimpleParser.Num_exprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_num_expr)
                        self.state = 57
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 58
                        localctx.op = self.mul_op()
                        self.state = 59
                        localctx.right = self.num_expr(5)
                        pass

                    elif la_ == 2:
                        localctx = SimpleParser.ADDEXPContext(self, SimpleParser.Num_exprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_num_expr)
                        self.state = 61
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 62
                        localctx.op = self.add_op()
                        self.state = 63
                        localctx.right = self.num_expr(4)
                        pass

             
                self.state = 69
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Bool_exprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_bool_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class NOTContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.right = None # Bool_exprContext
            self.copyFrom(ctx)

        def bool_expr(self):
            return self.getTypedRuleContext(SimpleParser.Bool_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNOT" ):
                listener.enterNOT(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNOT" ):
                listener.exitNOT(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNOT" ):
                return visitor.visitNOT(self)
            else:
                return visitor.visitChildren(self)


    class ORContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.left = None # Bool_exprContext
            self.right = None # Bool_exprContext
            self.copyFrom(ctx)

        def bool_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.Bool_exprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.Bool_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOR" ):
                listener.enterOR(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOR" ):
                listener.exitOR(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOR" ):
                return visitor.visitOR(self)
            else:
                return visitor.visitChildren(self)


    class ANDContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.left = None # Bool_exprContext
            self.right = None # Bool_exprContext
            self.copyFrom(ctx)

        def bool_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.Bool_exprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.Bool_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAND" ):
                listener.enterAND(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAND" ):
                listener.exitAND(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAND" ):
                return visitor.visitAND(self)
            else:
                return visitor.visitChildren(self)


    class RELContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.left = None # Num_exprContext
            self.right = None # Num_exprContext
            self.copyFrom(ctx)

        def rel(self):
            return self.getTypedRuleContext(SimpleParser.RelContext,0)

        def num_expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SimpleParser.Num_exprContext)
            else:
                return self.getTypedRuleContext(SimpleParser.Num_exprContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterREL" ):
                listener.enterREL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitREL" ):
                listener.exitREL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitREL" ):
                return visitor.visitREL(self)
            else:
                return visitor.visitChildren(self)


    class TRUEContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTRUE" ):
                listener.enterTRUE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTRUE" ):
                listener.exitTRUE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTRUE" ):
                return visitor.visitTRUE(self)
            else:
                return visitor.visitChildren(self)


    class FALSEContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFALSE" ):
                listener.enterFALSE(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFALSE" ):
                listener.exitFALSE(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFALSE" ):
                return visitor.visitFALSE(self)
            else:
                return visitor.visitChildren(self)


    class BRACKETEXPRBOOLContext(Bool_exprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a SimpleParser.Bool_exprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def bool_expr(self):
            return self.getTypedRuleContext(SimpleParser.Bool_exprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBRACKETEXPRBOOL" ):
                listener.enterBRACKETEXPRBOOL(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBRACKETEXPRBOOL" ):
                listener.exitBRACKETEXPRBOOL(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBRACKETEXPRBOOL" ):
                return visitor.visitBRACKETEXPRBOOL(self)
            else:
                return visitor.visitChildren(self)



    def bool_expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = SimpleParser.Bool_exprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 4
        self.enterRecursionRule(localctx, 4, self.RULE_bool_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = SimpleParser.TRUEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx

                self.state = 71
                self.match(SimpleParser.T__4)
                pass

            elif la_ == 2:
                localctx = SimpleParser.FALSEContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 72
                self.match(SimpleParser.T__5)
                pass

            elif la_ == 3:
                localctx = SimpleParser.BRACKETEXPRBOOLContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 73
                self.match(SimpleParser.T__2)
                self.state = 74
                self.bool_expr(0)
                self.state = 75
                self.match(SimpleParser.T__3)
                pass

            elif la_ == 4:
                localctx = SimpleParser.NOTContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 77
                self.match(SimpleParser.T__8)
                self.state = 78
                localctx.right = self.bool_expr(2)
                pass

            elif la_ == 5:
                localctx = SimpleParser.RELContext(self, localctx)
                self._ctx = localctx
                _prevctx = localctx
                self.state = 79
                localctx.left = self.num_expr(0)
                self.state = 80
                self.rel()
                self.state = 81
                localctx.right = self.num_expr(0)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 93
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 91
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        localctx = SimpleParser.ORContext(self, SimpleParser.Bool_exprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_expr)
                        self.state = 85
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 86
                        self.match(SimpleParser.T__6)
                        self.state = 87
                        localctx.right = self.bool_expr(5)
                        pass

                    elif la_ == 2:
                        localctx = SimpleParser.ANDContext(self, SimpleParser.Bool_exprContext(self, _parentctx, _parentState))
                        localctx.left = _prevctx
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_bool_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 89
                        self.match(SimpleParser.T__7)
                        self.state = 90
                        localctx.right = self.bool_expr(4)
                        pass

             
                self.state = 95
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class RelContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_rel

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRel" ):
                listener.enterRel(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRel" ):
                listener.exitRel(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRel" ):
                return visitor.visitRel(self)
            else:
                return visitor.visitChildren(self)




    def rel(self):

        localctx = SimpleParser.RelContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_rel)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 96
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 64512) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Mul_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_mul_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMul_op" ):
                listener.enterMul_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMul_op" ):
                listener.exitMul_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMul_op" ):
                return visitor.visitMul_op(self)
            else:
                return visitor.visitChildren(self)




    def mul_op(self):

        localctx = SimpleParser.Mul_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_mul_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            _la = self._input.LA(1)
            if not(_la==16 or _la==17):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Add_opContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return SimpleParser.RULE_add_op

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd_op" ):
                listener.enterAdd_op(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd_op" ):
                listener.exitAdd_op(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdd_op" ):
                return visitor.visitAdd_op(self)
            else:
                return visitor.visitChildren(self)




    def add_op(self):

        localctx = SimpleParser.Add_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_add_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_instrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(SimpleParser.AssignContext,0)


        def if_stat(self):
            return self.getTypedRuleContext(SimpleParser.If_statContext,0)


        def goto_stat(self):
            return self.getTypedRuleContext(SimpleParser.Goto_statContext,0)


        def block_instr(self):
            return self.getTypedRuleContext(SimpleParser.Block_instrContext,0)


        def output_stat(self):
            return self.getTypedRuleContext(SimpleParser.Output_statContext,0)


        def input_stat(self):
            return self.getTypedRuleContext(SimpleParser.Input_statContext,0)


        def exit_stat(self):
            return self.getTypedRuleContext(SimpleParser.Exit_statContext,0)


        def goto_target(self):
            return self.getTypedRuleContext(SimpleParser.Goto_targetContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_simple_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_instr" ):
                listener.enterSimple_instr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_instr" ):
                listener.exitSimple_instr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_instr" ):
                return visitor.visitSimple_instr(self)
            else:
                return visitor.visitChildren(self)




    def simple_instr(self):

        localctx = SimpleParser.Simple_instrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_simple_instr)
        try:
            self.state = 122
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 102
                self.assign()
                self.state = 103
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.if_stat()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 106
                self.goto_stat()
                self.state = 107
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 109
                self.block_instr()
                self.state = 110
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 112
                self.output_stat()
                self.state = 113
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 115
                self.input_stat()
                self.state = 116
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 118
                self.exit_stat()
                self.state = 119
                self.match(SimpleParser.T__17)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 121
                self.goto_target()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Block_instrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def instr(self):
            return self.getTypedRuleContext(SimpleParser.InstrContext,0)


        def getRuleIndex(self):
            return SimpleParser.RULE_block_instr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock_instr" ):
                listener.enterBlock_instr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock_instr" ):
                listener.exitBlock_instr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock_instr" ):
                return visitor.visitBlock_instr(self)
            else:
                return visitor.visitChildren(self)




    def block_instr(self):
